# procap

./: .gitignore  .mcp.json  CLAUDE.md  README.md  debt.md  pyproject.toml  road.md
.claude/: settings.json
.claude/skills/architecture-width-scan/: SKILL.md
.claude/skills/codify/: SKILL.md
.claude/skills/concern-review/: SKILL.md
.claude/skills/confer/: SKILL.md  feedback.md
.claude/skills/diagnose-process/: SKILL.md
.claude/skills/dispatch/: SKILL.md
.githooks/: pre-commit
.github/workflows/: pages.yml
corpus/: fetch_real.py  make_audit_demo.py  make_synthetic.py
corpus/synthetic/: labeled_demo.labels.json  written_procedure.md  written_procedure_reordered.md
docs/decisions/: 2026-06-26-demo-and-honesty-pass.md  2026-06-26-demo-value-prop-rebuild.md  2026-06-26-pipeline-and-contracts.md  2026-06-26-real-corpus-findings.md  2026-06-27-demo-real-input-and-actionable-audit.md
handoffs/: 2026-06-26 ProCap demo-redesign two-demos-interactive.md  2026-06-26 ProCap demo-restructure-and-confer.md  2026-06-26 procap build-and-frontier.md  agent-corpus-prompt.md  agent-vlm-prompt.md
method/: lesson-routing.md
procap/: __init__.py  audit.py  cli.py  eval.py  extract.py  golden.py  imageutil.py  model.py  procedure.py  run.py  vlm.py  webdemo.py
tests/: conftest.py  test_audit.py  test_extract.py  test_golden.py  test_integration.py  test_model.py  test_procedure.py  test_vlm.py
tools/: .cms-version  autoflag.py  backfill_decision_status.py  build_static.py  craft_reminder.py  flag_corpus.py  flag_corpus_seed.json  lint.py  lint_skeleton.py
(+15 files in other folders)
